--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,109 @@
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
 asgiref==3.4.1
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
+certifi==2021.5.30
+cffi==1.14.5
+cftime==1.5.0
+chardet==4.0.0
+click==8.0.1
+cloudpickle==1.6.0
+Cython==0.29.22
+dask==2021.8.0
+decorator==4.4.2
+defusedxml==0.7.1
+distlib==0.3.1
+dj-config-url==0.1.1
 dj-database-url==0.5.0
 Django==3.2.7
 django-cors-headers==3.8.0
 djangorestframework==3.12.4
+entrypoints==0.3
+filelock==3.0.12
+fsspec==2021.7.0
 gunicorn==20.1.0
+h5py==3.1.0
+idna==2.10
+iniconfig==1.1.1
 install==1.3.4
+ipykernel==5.5.0
+ipython==7.21.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==2.11.3
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.11
+jupyter-console==6.2.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Keras==2.4.3
+locket==0.2.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+netCDF4==1.5.7
+notebook==6.2.0
+numpy==1.19.4
+packaging==20.9
+panda==0.3.1
+pandas==1.2.5
+pandocfilters==1.4.3
+parso==0.8.1
+partd==1.2.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==0.13.1
+portalocker==2.3.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
 psycopg2==2.9.1
+ptyprocess==0.7.0
+py==1.10.0
+pycparser==2.20
+pycryptosat==0.6.1
+Pygments==2.8.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+pysat==3.0.1
+pytest==6.2.4
+python-dateutil==2.8.1
 python-sat==0.1.7.dev10
 pytz==2021.1
+PyYAML==5.3.1
+pyzmq==22.0.3
+qtconsole==5.0.2
+QtPy==1.9.0
+random-user-agent==1.0.1
+requests==2.25.1
+sagemath==1.3.0
+scipy==1.5.4
+selenium==3.141.0
+Send2Trash==1.5.0
 six==1.16.0
 sqlparse==0.4.2
+terminado==0.9.2
+testpath==0.4.4
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+traitlets==5.0.5
+typer==0.4.0
+Unidecode==1.3.2
+urllib3==1.26.5
+useragent==0.1.1
+virtualenv==20.4.0
+wcwidth==0.2.5
+webencodings==0.5.1
 whitenoise==5.3.0
+widgetsnbextension==3.5.1
+xarray==0.19.0
